fix(app): Reduce validation and dataset toolbar whitespace padding

--- a/packages/openneuro-components/src/dataset/dataset-page.scss
+++ b/packages/openneuro-components/src/dataset/dataset-page.scss
@@ -70,7 +70,7 @@
   .dataset-validation {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     @media (max-width: 767px) {
       flex-wrap: wrap;
       justify-content: flex-start;
